scrollbar fixed

--- a/src/app/pages/forgotpassword/forgotpassword.component.scss
+++ b/src/app/pages/forgotpassword/forgotpassword.component.scss
@@ -88,6 +88,7 @@
                         font-weight: 400;
                         color: red;
                         margin-left: 5px;
+                        cursor: pointer;
                     }
                 }
             }
