--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -28,3 +28,16 @@
 :host ::ng-deep .p-confirm-dialog-accept {
   background: $button-bg-color;  
 }
+
+::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+  background: #3b4d63;
+  // box-shadow: inset 0 0 4px #707070;
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffffe0;
+  border-radius: 10px;
+}
